[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies.actix]
package = "actix"
version = "=0.13.0"

[dependencies.actix_web]
package = "actix-web"
version = "=4.3.1"

[dependencies.aho_corasick]
package = "aho-corasick"
version = "=1.0.2"

[dependencies.ansi_term]
package = "ansi_term"
version = "=0.12.1"

[dependencies.anyhow]
package = "anyhow"
version = "=1.0.72"

[dependencies.approx]
package = "approx"
version = "=0.5.1"

[dependencies.async_recursion]
package = "async-recursion"
version = "=1.0.4"

[dependencies.async_trait]
package = "async-trait"
version = "=0.1.72"

[dependencies.atty]
package = "atty"
version = "=0.2.14"

[dependencies.autocfg]
package = "autocfg"
version = "=1.1.0"

[dependencies.axum]
package = "axum"
version = "=0.6.19"
features = ["http1", "http2", "json", "multipart", "ws"]

[dependencies.base64]
package = "base64"
version = "=0.21.2"

[dependencies.bitflags]
package = "bitflags"
version = "=2.3.3"

[dependencies.block_buffer]
package = "block-buffer"
version = "=0.10.4"

[dependencies.byteorder]
package = "byteorder"
version = "=1.4.3"

[dependencies.bytes]
package = "bytes"
version = "=1.4.0"

[dependencies.cc]
package = "cc"
version = "=1.0.79"

[dependencies.cfg_if]
package = "cfg-if"
version = "=1.0.0"

[dependencies.chrono]
package = "chrono"
version = "=0.4.26"
features = ["serde"]

[dependencies.clap]
package = "clap"
version = "=4.3.19"
features = ["unstable-doc"]

[dependencies.crossbeam]
package = "crossbeam"
version = "=0.8.2"

[dependencies.crossbeam_channel]
package = "crossbeam-channel"
version = "=0.5.8"

[dependencies.crossbeam_epoch]
package = "crossbeam-epoch"
version = "=0.9.15"

[dependencies.crossbeam_utils]
package = "crossbeam-utils"
version = "=0.8.16"

[dependencies.csv]
package = "csv"
version = "=1.2.2"

[dependencies.data_encoding]
package = "data-encoding"
version = "=2.4.0"

[dependencies.digest]
package = "digest"
version = "=0.10.7"

[dependencies.either]
package = "either"
version = "=1.9.0"

[dependencies.env_logger]
package = "env_logger"
version = "=0.10.0"

[dependencies.error_chain]
package = "error-chain"
version = "=0.12.4"

[dependencies.flate2]
package = "flate2"
version = "=1.0.26"

[dependencies.fnv]
package = "fnv"
version = "=1.0.7"

[dependencies.futures]
package = "futures"
version = "=0.3.28"
features = ["async-await", "compat", "executor", "io-compat", "std", "thread-pool"]

[dependencies.futures_channel]
package = "futures-channel"
version = "=0.3.28"

[dependencies.futures_core]
package = "futures-core"
version = "=0.3.28"

[dependencies.futures_io]
package = "futures-io"
version = "=0.3.28"

[dependencies.futures_sink]
package = "futures-sink"
version = "=0.3.28"

[dependencies.futures_task]
package = "futures-task"
version = "=0.3.28"

[dependencies.futures_util]
package = "futures-util"
version = "=0.3.28"

[dependencies.generic_array]
package = "generic-array"
version = "=0.14.7"

[dependencies.getrandom]
package = "getrandom"
version = "=0.2.10"

[dependencies.glob]
package = "glob"
version = "=0.3.1"

[dependencies.hashbrown]
package = "hashbrown"
version = "=0.14.0"

[dependencies.heck]
package = "heck"
version = "=0.4.1"

[dependencies.http]
package = "http"
version = "=0.2.9"

[dependencies.httparse]
package = "httparse"
version = "=1.8.0"

[dependencies.hyper]
package = "hyper"
version = "=0.14.27"
features = ["full"]

[dependencies.idna]
package = "idna"
version = "=0.4.0"

[dependencies.image]
package = "image"
version = "=0.24.6"

[dependencies.indexmap]
package = "indexmap"
version = "=2.0.0"

[dependencies.itertools]
package = "itertools"
version = "=0.11.0"

[dependencies.itoa]
package = "itoa"
version = "=1.0.9"

[dependencies.lazy_static]
package = "lazy_static"
version = "=1.4.0"

[dependencies.libc]
package = "libc"
version = "=0.2.147"

[dependencies.lock_api]
package = "lock_api"
version = "=0.4.10"

[dependencies.log]
package = "log"
version = "=0.4.19"

[dependencies.log4rs]
package = "log4rs"
version = "=1.2.0"

[dependencies.memchr]
package = "memchr"
version = "=2.5.0"

[dependencies.memmap]
package = "memmap"
version = "=0.7.0"

[dependencies.memoffset]
package = "memoffset"
version = "=0.9.0"

[dependencies.mime]
package = "mime"
version = "=0.3.17"

[dependencies.miniz_oxide]
package = "miniz_oxide"
version = "=0.7.1"

[dependencies.mio]
package = "mio"
version = "=0.8.8"
features = ["net", "os-ext", "os-poll"]

[dependencies.nalgebra]
package = "nalgebra"
version = "=0.32.3"

[dependencies.ndarray]
package = "ndarray"
version = "=0.15.6"

[dependencies.nom]
package = "nom"
version = "=7.1.3"

[dependencies.num]
package = "num"
version = "=0.4.1"

[dependencies.num_cpus]
package = "num_cpus"
version = "=1.16.0"

[dependencies.num_integer]
package = "num-integer"
version = "=0.1.45"

[dependencies.num_traits]
package = "num-traits"
version = "=0.2.16"

[dependencies.once_cell]
package = "once_cell"
version = "=1.18.0"

[dependencies.parking_lot]
package = "parking_lot"
version = "=0.12.1"

[dependencies.parking_lot_core]
package = "parking_lot_core"
version = "=0.9.8"

[dependencies.percent_encoding]
package = "percent-encoding"
version = "=2.3.0"

[dependencies.petgraph]
package = "petgraph"
version = "=0.6.3"

[dependencies.pin_project_lite]
package = "pin-project-lite"
version = "=0.2.10"

[dependencies.pin_utils]
package = "pin-utils"
version = "=0.1.0"

[dependencies.pkg_config]
package = "pkg-config"
version = "=0.3.27"

[dependencies.postgres]
package = "postgres"
version = "=0.19.5"

[dependencies.ppv_lite86]
package = "ppv-lite86"
version = "=0.2.17"

[dependencies.proc_macro2]
package = "proc-macro2"
version = "=1.0.66"
features = ["span-locations"]

[dependencies.quote]
package = "quote"
version = "=1.0.32"

[dependencies.rand]
package = "rand"
version = "=0.8.5"
features = ["serde1", "small_rng"]

[dependencies.rand_chacha]
package = "rand_chacha"
version = "=0.3.1"

[dependencies.rand_core]
package = "rand_core"
version = "=0.6.4"
features = ["alloc", "getrandom", "serde", "serde1", "std"]

[dependencies.rand_distr]
package = "rand_distr"
version = "=0.4.3"

[dependencies.rayon]
package = "rayon"
version = "=1.7.0"

[dependencies.regex]
package = "regex"
version = "=1.9.1"

[dependencies.regex_syntax]
package = "regex-syntax"
version = "=0.7.4"

[dependencies.reqwest]
package = "reqwest"
version = "=0.11.18"
features = ["blocking", "cookies", "json", "multipart"]

[dependencies.ring]
package = "ring"
version = "=0.16.20"

[dependencies.rusqlite]
package = "rusqlite"
version = "=0.29.0"
features = ["bundled-full"]

[dependencies.rustc_version]
package = "rustc_version"
version = "=0.4.0"

[dependencies.ryu]
package = "ryu"
version = "=1.0.15"

[dependencies.same_file]
package = "same-file"
version = "=1.0.6"

[dependencies.scopeguard]
package = "scopeguard"
version = "=1.2.0"

[dependencies.select]
package = "select"
version = "=0.6.0"

[dependencies.semver]
package = "semver"
version = "=1.0.18"

[dependencies.serde]
package = "serde"
version = "=1.0.178"
features = ["derive", "rc"]

[dependencies.serde_derive]
package = "serde_derive"
version = "=1.0.178"

[dependencies.serde_json]
package = "serde_json"
version = "=1.0.104"
features = ["raw_value"]

[dependencies.sha2]
package = "sha2"
version = "=0.10.7"

[dependencies.slab]
package = "slab"
version = "=0.4.8"

[dependencies.smallvec]
package = "smallvec"
version = "=1.11.0"

[dependencies.socket2]
package = "socket2"
version = "=0.5.3"
features = ["all"]

[dependencies.strsim]
package = "strsim"
version = "=0.10.0"

[dependencies.syn]
package = "syn"
version = "=2.0.27"
features = ["extra-traits", "fold", "full", "visit", "visit-mut"]

[dependencies.tar]
package = "tar"
version = "=0.4.39"

[dependencies.tempfile]
package = "tempfile"
version = "=3.7.0"

[dependencies.termcolor]
package = "termcolor"
version = "=1.2.0"

[dependencies.textwrap]
package = "textwrap"
version = "=0.16.0"

[dependencies.thiserror]
package = "thiserror"
version = "=1.0.44"

[dependencies.thiserror_impl]
package = "thiserror-impl"
version = "=1.0.44"

[dependencies.thread_local]
package = "thread_local"
version = "=1.1.7"

[dependencies.threadpool]
package = "threadpool"
version = "=1.8.1"

[dependencies.time]
package = "time"
version = "=0.3.23"

[dependencies.tinyvec]
package = "tinyvec"
version = "=1.6.0"
features = ["alloc", "grab_spare_slice", "rustc_1_40", "rustc_1_55", "serde", "std"]

[dependencies.tokio]
package = "tokio"
version = "=1.29.1"
features = ["full", "test-util"]

[dependencies.tokio_util]
package = "tokio-util"
version = "=0.7.8"

[dependencies.toml]
package = "toml"
version = "=0.7.6"

[dependencies.tracing]
package = "tracing"
version = "=0.1.37"

[dependencies.tracing_core]
package = "tracing-core"
version = "=0.1.31"

[dependencies.typenum]
package = "typenum"
version = "=1.16.0"

[dependencies.unicode_bidi]
package = "unicode-bidi"
version = "=0.3.13"

[dependencies.unicode_ident]
package = "unicode-ident"
version = "=1.0.11"

[dependencies.unicode_normalization]
package = "unicode-normalization"
version = "=0.1.22"

[dependencies.unicode_segmentation]
package = "unicode-segmentation"
version = "=1.10.1"

[dependencies.unicode_width]
package = "unicode-width"
version = "=0.1.10"

[dependencies.unicode_xid]
package = "unicode-xid"
version = "=0.2.4"

[dependencies.url]
package = "url"
version = "=2.4.0"
features = ["serde"]

[dependencies.version_check]
package = "version_check"
version = "=0.9.4"

[dependencies.walkdir]
package = "walkdir"
version = "=2.3.3"

[dependencies.winapi]
package = "winapi"
version = "=0.3.9"
