[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies.actix]
package = "actix"
version = "=0.13.1"

[dependencies.actix_web]
package = "actix-web"
version = "=4.4.1"

[dependencies.ahash]
package = "ahash"
version = "=0.8.7"

[dependencies.aho_corasick]
package = "aho-corasick"
version = "=1.1.2"

[dependencies.ansi_term]
package = "ansi_term"
version = "=0.12.1"

[dependencies.anyhow]
package = "anyhow"
version = "=1.0.79"

[dependencies.approx]
package = "approx"
version = "=0.5.1"

[dependencies.async_recursion]
package = "async-recursion"
version = "=1.0.5"

[dependencies.async_trait]
package = "async-trait"
version = "=0.1.77"

[dependencies.atty]
package = "atty"
version = "=0.2.14"

[dependencies.autocfg]
package = "autocfg"
version = "=1.1.0"

[dependencies.axum]
package = "axum"
version = "=0.7.4"
features = ["http1", "http2", "json", "multipart", "ws"]

[dependencies.base64]
package = "base64"
version = "=0.21.7"

[dependencies.bitflags]
package = "bitflags"
version = "=2.4.2"

[dependencies.block_buffer]
package = "block-buffer"
version = "=0.10.4"

[dependencies.byteorder]
package = "byteorder"
version = "=1.5.0"

[dependencies.bytes]
package = "bytes"
version = "=1.5.0"

[dependencies.cc]
package = "cc"
version = "=1.0.83"

[dependencies.cfg_if]
package = "cfg-if"
version = "=1.0.0"

[dependencies.chrono]
package = "chrono"
version = "=0.4.31"
features = ["serde"]

[dependencies.clap]
package = "clap"
version = "=4.4.18"
features = ["unstable-doc"]

[dependencies.crossbeam]
package = "crossbeam"
version = "=0.8.4"

[dependencies.crossbeam_channel]
package = "crossbeam-channel"
version = "=0.5.11"

[dependencies.crossbeam_epoch]
package = "crossbeam-epoch"
version = "=0.9.18"

[dependencies.crossbeam_utils]
package = "crossbeam-utils"
version = "=0.8.19"

[dependencies.csv]
package = "csv"
version = "=1.3.0"

[dependencies.data_encoding]
package = "data-encoding"
version = "=2.5.0"

[dependencies.digest]
package = "digest"
version = "=0.10.7"

[dependencies.either]
package = "either"
version = "=1.9.0"

[dependencies.env_logger]
package = "env_logger"
version = "=0.11.0"

[dependencies.error_chain]
package = "error-chain"
version = "=0.12.4"

[dependencies.flate2]
package = "flate2"
version = "=1.0.28"

[dependencies.fnv]
package = "fnv"
version = "=1.0.7"

[dependencies.futures]
package = "futures"
version = "=0.3.30"
features = ["async-await", "compat", "executor", "io-compat", "std", "thread-pool"]

[dependencies.futures_channel]
package = "futures-channel"
version = "=0.3.30"

[dependencies.futures_core]
package = "futures-core"
version = "=0.3.30"

[dependencies.futures_io]
package = "futures-io"
version = "=0.3.30"

[dependencies.futures_sink]
package = "futures-sink"
version = "=0.3.30"

[dependencies.futures_task]
package = "futures-task"
version = "=0.3.30"

[dependencies.futures_util]
package = "futures-util"
version = "=0.3.30"

[dependencies.generic_array]
package = "generic-array"
version = "=1.0.0"
features = ["alloc", "const-default", "faster-hex", "internals", "serde", "zeroize"]

[dependencies.getrandom]
package = "getrandom"
version = "=0.2.12"

[dependencies.glob]
package = "glob"
version = "=0.3.1"

[dependencies.hashbrown]
package = "hashbrown"
version = "=0.14.3"

[dependencies.heck]
package = "heck"
version = "=0.4.1"

[dependencies.http]
package = "http"
version = "=1.0.0"

[dependencies.hyper]
package = "hyper"
version = "=1.1.0"
features = ["full"]

[dependencies.idna]
package = "idna"
version = "=0.5.0"

[dependencies.image]
package = "image"
version = "=0.24.8"

[dependencies.indexmap]
package = "indexmap"
version = "=2.1.0"

[dependencies.itertools]
package = "itertools"
version = "=0.12.0"

[dependencies.itoa]
package = "itoa"
version = "=1.0.10"

[dependencies.lazy_static]
package = "lazy_static"
version = "=1.4.0"

[dependencies.libc]
package = "libc"
version = "=0.2.152"

[dependencies.lock_api]
package = "lock_api"
version = "=0.4.11"

[dependencies.log]
package = "log"
version = "=0.4.20"

[dependencies.log4rs]
package = "log4rs"
version = "=1.2.0"

[dependencies.memchr]
package = "memchr"
version = "=2.7.1"

[dependencies.memmap]
package = "memmap"
version = "=0.7.0"

[dependencies.memoffset]
package = "memoffset"
version = "=0.9.0"

[dependencies.mime]
package = "mime"
version = "=0.3.17"

[dependencies.miniz_oxide]
package = "miniz_oxide"
version = "=0.7.1"

[dependencies.mio]
package = "mio"
version = "=0.8.10"
features = ["net", "os-ext", "os-poll"]

[dependencies.nalgebra]
package = "nalgebra"
version = "=0.32.3"

[dependencies.ndarray]
package = "ndarray"
version = "=0.15.6"

[dependencies.nom]
package = "nom"
version = "=7.1.3"

[dependencies.num]
package = "num"
version = "=0.4.1"

[dependencies.num_cpus]
package = "num_cpus"
version = "=1.16.0"

[dependencies.num_integer]
package = "num-integer"
version = "=0.1.45"

[dependencies.num_traits]
package = "num-traits"
version = "=0.2.17"

[dependencies.once_cell]
package = "once_cell"
version = "=1.19.0"

[dependencies.parking_lot]
package = "parking_lot"
version = "=0.12.1"

[dependencies.parking_lot_core]
package = "parking_lot_core"
version = "=0.9.9"

[dependencies.percent_encoding]
package = "percent-encoding"
version = "=2.3.1"

[dependencies.petgraph]
package = "petgraph"
version = "=0.6.4"

[dependencies.pin_project_lite]
package = "pin-project-lite"
version = "=0.2.13"

[dependencies.pin_utils]
package = "pin-utils"
version = "=0.1.0"

[dependencies.pkg_config]
package = "pkg-config"
version = "=0.3.29"

[dependencies.postgres]
package = "postgres"
version = "=0.19.7"

[dependencies.ppv_lite86]
package = "ppv-lite86"
version = "=0.2.17"

[dependencies.proc_macro2]
package = "proc-macro2"
version = "=1.0.76"
features = ["span-locations"]

[dependencies.quote]
package = "quote"
version = "=1.0.35"

[dependencies.rand]
package = "rand"
version = "=0.8.5"
features = ["serde1", "small_rng"]

[dependencies.rand_chacha]
package = "rand_chacha"
version = "=0.3.1"

[dependencies.rand_core]
package = "rand_core"
version = "=0.6.4"
features = ["alloc", "getrandom", "serde", "serde1", "std"]

[dependencies.rand_distr]
package = "rand_distr"
version = "=0.4.3"

[dependencies.rayon]
package = "rayon"
version = "=1.8.1"

[dependencies.regex]
package = "regex"
version = "=1.10.2"

[dependencies.regex_automata]
package = "regex-automata"
version = "=0.4.3"

[dependencies.regex_syntax]
package = "regex-syntax"
version = "=0.8.2"

[dependencies.reqwest]
package = "reqwest"
version = "=0.11.23"
features = ["blocking", "cookies", "json", "multipart"]

[dependencies.ring]
package = "ring"
version = "=0.17.7"

[dependencies.rusqlite]
package = "rusqlite"
version = "=0.30.0"
features = ["bundled-full"]

[dependencies.rustc_version]
package = "rustc_version"
version = "=0.4.0"

[dependencies.ryu]
package = "ryu"
version = "=1.0.16"

[dependencies.same_file]
package = "same-file"
version = "=1.0.6"

[dependencies.scopeguard]
package = "scopeguard"
version = "=1.2.0"

[dependencies.select]
package = "select"
version = "=0.6.0"

[dependencies.semver]
package = "semver"
version = "=1.0.21"

[dependencies.serde]
package = "serde"
version = "=1.0.195"
features = ["derive", "rc"]

[dependencies.serde_derive]
package = "serde_derive"
version = "=1.0.195"

[dependencies.serde_json]
package = "serde_json"
version = "=1.0.111"
features = ["raw_value"]

[dependencies.sha2]
package = "sha2"
version = "=0.10.8"

[dependencies.slab]
package = "slab"
version = "=0.4.9"

[dependencies.smallvec]
package = "smallvec"
version = "=1.13.1"

[dependencies.socket2]
package = "socket2"
version = "=0.5.5"
features = ["all"]

[dependencies.strsim]
package = "strsim"
version = "=0.11.0"

[dependencies.syn]
package = "syn"
version = "=2.0.48"
features = ["extra-traits", "fold", "full", "visit", "visit-mut"]

[dependencies.tar]
package = "tar"
version = "=0.4.40"

[dependencies.tempfile]
package = "tempfile"
version = "=3.9.0"

[dependencies.termcolor]
package = "termcolor"
version = "=1.4.1"

[dependencies.textwrap]
package = "textwrap"
version = "=0.16.0"

[dependencies.thiserror]
package = "thiserror"
version = "=1.0.56"

[dependencies.thiserror_impl]
package = "thiserror-impl"
version = "=1.0.56"

[dependencies.threadpool]
package = "threadpool"
version = "=1.8.1"

[dependencies.time]
package = "time"
version = "=0.3.31"

[dependencies.tinyvec]
package = "tinyvec"
version = "=1.6.0"
features = ["alloc", "grab_spare_slice", "rustc_1_40", "rustc_1_55", "serde", "std"]

[dependencies.tokio]
package = "tokio"
version = "=1.35.1"
features = ["full", "test-util"]

[dependencies.tokio_util]
package = "tokio-util"
version = "=0.7.10"

[dependencies.toml]
package = "toml"
version = "=0.8.8"

[dependencies.tracing]
package = "tracing"
version = "=0.1.40"

[dependencies.tracing_core]
package = "tracing-core"
version = "=0.1.32"

[dependencies.typenum]
package = "typenum"
version = "=1.17.0"
features = ["const-generics", "i128"]

[dependencies.unicode_bidi]
package = "unicode-bidi"
version = "=0.3.15"

[dependencies.unicode_ident]
package = "unicode-ident"
version = "=1.0.12"

[dependencies.unicode_normalization]
package = "unicode-normalization"
version = "=0.1.22"

[dependencies.unicode_segmentation]
package = "unicode-segmentation"
version = "=1.10.1"

[dependencies.unicode_width]
package = "unicode-width"
version = "=0.1.11"

[dependencies.unicode_xid]
package = "unicode-xid"
version = "=0.2.4"

[dependencies.url]
package = "url"
version = "=2.5.0"
features = ["serde"]

[dependencies.uuid]
package = "uuid"
version = "=1.7.0"
features = ["serde", "v1", "v3", "v4", "v5", "v6", "v7", "v8"]

[dependencies.version_check]
package = "version_check"
version = "=0.9.4"

[dependencies.walkdir]
package = "walkdir"
version = "=2.4.0"
